[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
wgpu = "0.19.0"
pixels = "0.13.0"
druid = "0.8.3"
druid-shell = "0.8.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
time = "0.3.31"
url = "2.5.0"
serde = { version = "1.0.195", features = ["derive"] }
im = "15.0.0"
async-channel = "2.1.1"
rdev = "0.5.3"
